dataset1235/2025-2/805158916/users/1514794398/executions/2651470117_2383239197.log
== RUN (2025-08-27 03:37:16)
-- CODE: 
distA = float(input("digite a distancia a"))
distB = float(input("digite a distancia b"))
angAB = float(input("digite o angulo entre a e b"))
import math
c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 12:30:39)
-- CODE: 
distA = float(input("digite a distância a"))
distB = float(input("digite a distância b"))
angAB = float(input("digite o ângulo entre a e b"))       
import math
ang = math.radians(angAB)
math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:36:21)
-- CODE: 
distA = float(input("digite a distancia a"))
distB = float(input("digite a distancia b"))
angAB = float(input("digite o angulo entre a e b"))
c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:34:43)
-- CODE: 
distA = float(input("digite a distancia a :"))
distB = float(input("digite a distancia b :"))
angAB = float(input("digite o angulo entre a e b :"))
c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
         ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 12:34:42)
-- CODE: 
distA = float(input("digite a distância a: "))
distB = float(input("digite a distância b: "))
angAB = float(input("digite o ângulo entre a e b: "))       
import math
ang = math.radians(angAB)
c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
digite a distância a: digite a distância b: digite o ângulo entre a e b: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
digite a distância a: digite a distância b: digite o ângulo entre a e b: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
digite a distância a: digite a distância b: digite o ângulo entre a e b: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
digite a distância a: digite a distância b: digite o ângulo entre a e b: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
digite a distância a: digite a distância b: digite o ângulo entre a e b: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
digite a distância a: digite a distância b: digite o ângulo entre a e b: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:42:02)
-- CODE: 
distA = float(input("digite a distancia a"))
distB = float(input("digite a distancia b"))
angAB = float(input("digite o angulo entre a e b"))
import math
c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
                                                                ^^^
NameError: name 'ang' is not defined. Did you mean: 'any'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 12:30:04)
-- CODE: 
distA = float(input("digite a distância a"))
distB = float(input("digite a distância b"))
angAB = float(input("digite o ângulo entre a e b"))       
import math
ang = math.radians(angAB)
math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    math (math.sqrt(distA**2 + distB**2 - 2*distA*distB*math.cos(ang)))
TypeError: 'module' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
